<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_favorites_add"
        android:icon="@drawable/ic_favorite_border"
        android:orderInCategory="100"
        android:title="@string/add_to_favorites"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorites_remove"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="101"
        android:title="@string/remove_from_favorites"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="102"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="always" />
</menu>