<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/format_movie_poster_content_description"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/poster_placeholder" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <!-- Release date -->
                    <TextView
                        android:id="@+id/tv_release_date_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/tv_movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/secondary_text"
                        tools:text="2015" />

                    <!-- Runtime -->
                    <TextView
                        android:id="@+id/tv_movie_runtime_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/runtime"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/tv_movie_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/secondary_text"
                        tools:text="120min" />

                    <!-- Rating -->
                    <TextView
                        android:id="@+id/tv_movie_rating_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/rating"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/tv_movie_user_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/secondary_text"
                        tools:text="8.1/10" />

                    <RatingBar
                        android:id="@+id/rb_movie_rating_indicator"
                        style="@style/Base.Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="4.08" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/secondary_text"
                android:textSize="18sp"
                tools:text="Movie overview" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>